fixed input overflowing

--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body,
+html {
+  overflow: hidden;
+}
+
 header {
   display: flex;
   flex-direction: row;
@@ -102,7 +112,6 @@ main {
   height: 50vh;
   margin-top: 10vh;
 
-
   #google-logo {
     width: 272px;
 
@@ -138,8 +147,11 @@ main {
       margin: 30px 0;
       border-radius: 50px;
       border: 1px solid lightgray;
-      padding-left: 50px;
+      padding: 0 50px;
       font: 16px arial, Helvetica, sans-serif;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       &:focus {
         outline: none;
